--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,8 @@ li:nth-child(4) a {
   padding-bottom: 20px;
   background-image: url(./images/mbtl2.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 200%;
+  background-position-x: center;
 }
 
 .logus {
@@ -161,7 +162,7 @@ li:nth-child(4) a {
   background-image: url(./images/bg-pt2.jpg);
   background-repeat: no-repeat;
   background-position-x: center;
-  background-size: 140%;
+  background-size: 180%;
 }
 
 .charimg1 {
@@ -188,7 +189,7 @@ li:nth-child(4) a {
   background-image: url(./images/bg-staff.png);
   background-repeat: no-repeat;
   background-position-x: center;
-  background-size: 140%;
+  background-size: 160%;
   margin-top: -20px;
   padding: 5px 10px 10px 10px;
 }
@@ -199,7 +200,7 @@ li:nth-child(4) a {
   background-image: url(./images/bg-pt2.jpg);
   background-repeat: no-repeat;
   background-position-x: center;
-  background-size: 150%;
+  background-size: 200%;
   margin-bottom: -20px;
   padding-bottom: 50px;
 }
@@ -294,7 +295,7 @@ li:nth-child(4) a {
   background-image: url(./images/bg-pt2.jpg);
   background-repeat: no-repeat;
   background-position-x: center;
-  background-size: 120%;
+  background-size: 180%;
   margin-bottom: -20px;
   padding-bottom: 50px;
 }
